[tool.poetry]
name = "sonicosapi"
version = "0.1.0"
description = "internal tool to configure sonicwall firewalls"
authors = ["Elvin Salcedo <esalcedo@avitpartners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
