[tool.poetry]
name = "sonicosapi"
version = "0.1.0"
description = ""
authors = ["botbeans <esalcedo@avitpartners.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
urllib3 = "^2.0.4"
ordereddict = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
